--- a/package.json
+++ b/package.json
@@ -22,27 +22,37 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.830.0",
     "@google-cloud/storage": "^7.16.0",
+    "@koush/wrtc": "^0.5.3",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.1.5",
+    "@nestjs/platform-ws": "^11.1.5",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^10.4.19",
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-sdk-ng": "^4.23.4",
+    "agora-rtm-sdk": "^2.2.2",
     "axios": "^1.10.0",
     "chokidar": "^3.6.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "hls.js": "^1.6.5",
+    "mediasoup": "^3.11.5",
     "mime-types": "^3.0.1",
     "node-media-server": "^4.0.18",
     "portfinder": "^1.0.37",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "worker-threads": "^1.0.0"
+    "worker-threads": "^1.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
