--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,31 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "declaration": true,
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "ES2021",
-        "sourceMap": true,
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "incremental": true,
-        "skipLibCheck": true,
-        "strictNullChecks": false,
-        "noImplicitAny": false,
-        "strictBindCallApply": false,
-        "forceConsistentCasingInFileNames": false,
-        "noFallthroughCasesInSwitch": false,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "paths": {
-            "src/*": ["src/*"],
-            "src/module/*": ["src/module/*"],
-        }
-    },
-    "include": ["src/**/*", "express.d.ts"]
+  "compilerOptions": {
+      "module": "commonjs",
+      "declaration": true,
+      "removeComments": true,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "allowSyntheticDefaultImports": true,
+      "target": "ES2021",
+      "sourceMap": true,
+      "outDir": "./dist",
+      "rootDir": ".",
+      "baseUrl": "./",
+      "incremental": true,
+      "skipLibCheck": true,
+      "strictNullChecks": false,
+      "noImplicitAny": false,
+      "strictBindCallApply": false,
+      "forceConsistentCasingInFileNames": false,
+      "noFallthroughCasesInSwitch": false,
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
+      "paths": {
+          "src/*": ["src/*"],
+          "src/module/*": ["src/module/*"],
+          "src/shared/*": ["src/shared/*"],
+          "src/migrations/*": ["src/migrations/*"]
+      }
+  },
+  "include": ["src", "src/**/*.ps1", "src/**/*.exe", "src/**/*.sh"]
 }
